--- a/src/main/resources/templates/admin/layout/config/banner.html
+++ b/src/main/resources/templates/admin/layout/config/banner.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
-            <section id="admin-config-banner">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="/admin/index.html">
+            <section id="admin-config-banner" layout:fragment="content">
                 <nav>
                     <h3>배너관리</h3>
                     <p>
@@ -41,7 +43,7 @@
                             <tr>
                                 <td><input type="checkbox" name="배너번호"/></td>
                                 <td>201603292</td>
-                                <td><img src="../../images/topBanner1.png" class="thumb"></td>                            
+                                <td><img src="../images/topBanner1.png" class="thumb"></td>                            
                                 <td>
                                     <ul>
                                         <li class="name">배너이름</li>
@@ -64,7 +66,7 @@
                             <tr>
                                 <td><input type="checkbox" name="배너번호"/></td>
                                 <td>201603292</td>
-                                <td><img src="../../images/topBanner2.png" class="thumb"></td>                            
+                                <td><img src="../images/topBanner2.png" class="thumb"></td>                            
                                 <td>
                                     <ul>
                                         <li class="name">배너이름</li>
@@ -113,7 +115,7 @@
                             <tr>
                                 <td><input type="checkbox" name="배너번호"/></td>
                                 <td>201603292</td>
-                                <td><img src="../../images/slider_item1.jpg" class="thumb"></td>                            
+                                <td><img src="../images/slider_item1.jpg" class="thumb"></td>                            
                                 <td>
                                     <ul>
                                         <li class="name">배너이름</li>
@@ -135,7 +137,7 @@
                             <tr>
                                 <td><input type="checkbox" name="배너번호"/></td>
                                 <td>201603292</td>
-                                <td><img src="../../images/slider_item2.jpg" class="thumb"></td>                            
+                                <td><img src="../images/slider_item2.jpg" class="thumb"></td>                            
                                 <td>
                                     <ul>
                                         <li class="name">배너이름</li>
@@ -157,7 +159,7 @@
                             <tr>
                                 <td><input type="checkbox" name="배너번호"/></td>
                                 <td>201603292</td>
-                                <td><img src="../../images/slider_item3.jpg" class="thumb"></td>                            
+                                <td><img src="../images/slider_item3.jpg" class="thumb"></td>                            
                                 <td>
                                     <ul>
                                         <li class="name">배너이름</li>
@@ -179,7 +181,7 @@
                             <tr>
                                 <td><input type="checkbox" name="배너번호"/></td>
                                 <td>201603292</td>
-                                <td><img src="../../images/slider_item4.jpg" class="thumb"></td>                            
+                                <td><img src="../images/slider_item4.jpg" class="thumb"></td>                            
                                 <td>
                                     <ul>
                                         <li class="name">배너이름</li>
@@ -226,7 +228,7 @@
                             <tr>
                                 <td><input type="checkbox" name="배너번호"/></td>
                                 <td>201603292</td>
-                                <td><img src="../../images/vip_plcc_banner.png" class="thumb"></td>                            
+                                <td><img src="../images/vip_plcc_banner.png" class="thumb"></td>                            
                                 <td>
                                     <ul>
                                         <li class="name">배너이름</li>
@@ -273,7 +275,7 @@
                             <tr>
                                 <td><input type="checkbox" name="배너번호"/></td>
                                 <td>201603292</td>
-                                <td><img src="/member/images/member_login_banner.jpg" class="thumb"></td>                            
+                                <td><img src="../images/member_login_banner.jpg" class="thumb"></td>                            
                                 <td>
                                     <ul>
                                         <li class="name">배너이름</li>
@@ -320,7 +322,7 @@
                             <tr>
                                 <td><input type="checkbox" name="배너번호"/></td>
                                 <td>201603292</td>
-                                <td><img src="/my/images/my_banner1.jpg" class="thumb"></td>                            
+                                <td><img src="../images/my_banner1.jpg" class="thumb"></td>                            
                                 <td>
                                     <ul>
                                         <li class="name">배너이름</li>
@@ -342,7 +344,7 @@
                             <tr>
                                 <td><input type="checkbox" name="배너번호"/></td>
                                 <td>201603292</td>
-                                <td><img src="/my/images/my_banner2.png" class="thumb"></td>                            
+                                <td><img src="../images/my_banner2.png" class="thumb"></td>                            
                                 <td>
                                     <ul>
                                         <li class="name">배너이름</li>
