--- a/src/main/resources/templates/policy/buyer.html
+++ b/src/main/resources/templates/policy/buyer.html
@@ -1,205 +1,80 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>구매회원 약관</title>
-    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css"/>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css"/>
-    <link rel="stylesheet" href="../css/common.css" />
-    <link rel="stylesheet" href="./css/style.css" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-    <script src="https://kit.fontawesome.com/20962f3e4b.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>    
-</head>
-<body>
-    <div id="wrapper">
-      <header>
-        <div class="top">
-            <div>
-                <a href="#">로그인</a>
-                <a href="#">회원가입</a>
-                <a href="#">마이페이지</a>
-                <a href="#"><i class="fa fa-shopping-cart" aria-hidden="true"></i>&nbsp;장바구니</a>
-            </div>
-        </div>
-        <div class="logo">
-            <div>
-              <a href="#"><img src="../images/header_logo.png" alt="로고" /></a>
-                <form action="#">
-                    <input type="text" name="search"/>
-                    <button><i class="fa fa-search"></i></button>
-                </form>                
-            </div>            
-        </div>
-        <div class="menu">
-          <div>
-              <ul>
-                  <li><a href="#">히트상품</a></li>
-                  <li><a href="#">추천상품</a></li>
-                  <li><a href="#">최신상품</a></li>
-                  <li><a href="#">인기상품</a></li>
-                  <li><a href="#">할인상품</a></li>
-              </ul>
-              <ul>
-                  <li><a href="#">공지사항</a></li>
-                  <li><a href="#">자주묻는질문</a></li>
-                  <li><a href="#">문의하기</a></li>
-                  <li><a href="#">고객센터</a></li>
-              </ul>
-          </div>
-      </div>
-    </header>
-
-        <main id="termsPolicy">
-            <aside>
-                <!-- 카테고리 -->
-                <ul class="category">
-                  <li><i class="fa fa-bars" aria-hidden="true"></i>카테고리</li>
-                  <li>
-                    <a href="#"
-                      ><i class="fas fa-tshirt"></i>패션·의류·뷰티<i
-                        class="fas fa-angle-right"
-                      ></i
-                    ></a>
-                    <ol>
-                      <li><a href="#">남성의류</a></li>
-                      <li><a href="#">여성의류</a></li>
-                      <li><a href="#">잡화</a></li>
-                      <li><a href="#">뷰티</a></li>
-                    </ol>
-                  </li>
-                  <li>
-                    <a href="#"
-                      ><i class="fas fa-laptop"></i>가전·디지털<i
-                        class="fas fa-angle-right"
-                      ></i
-                    ></a>
-                    <ol>
-                      <li><a href="#">노트북/PC</a></li>
-                      <li><a href="#">가전</a></li>
-                      <li><a href="#">휴대폰</a></li>
-                      <li><a href="#">기타</a></li>
-                    </ol>
-                  </li>
-                  <li>
-                    <a href="#"
-                      ><i class="fas fa-utensils"></i>식품·생필품<i
-                        class="fas fa-angle-right"
-                      ></i
-                    ></a>
-                    <ol>
-                      <li><a href="#">신선식품</a></li>
-                      <li><a href="#">가공식품</a></li>
-                      <li><a href="#">건강식품</a></li>
-                      <li><a href="#">생필품</a></li>
-                    </ol>
-                  </li>
-                  <li>
-                    <a href="#"
-                      ><i class="fas fa-home"></i>홈·문구·취미<i
-                        class="fas fa-angle-right"
-                      ></i
-                    ></a>
-                    <ol>
-                      <li><a href="#">가구/DIY</a></li>
-                      <li><a href="#">침구·커튼</a></li>
-                      <li><a href="#">생활용품</a></li>
-                      <li><a href="#">사무용품</a></li>
-                    </ol>
-                  </li>
-                </ul>
-            </aside>
-            
-            <section class="buyer">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.thymeleaf.org/"
+	  layout:decorate="/policy/policyindex.html">
+            <section layout:fragment="content">
                 <nav>
                   <h1>LotteON 서비스 이용약관</h1>
                   <ul>
-                    <li class="on"><a href="./buyer.html">구매회원 약관</a></li>
-                    <li><a href="./seller.html">판매회원 약관</a></li>                    
-                    <li><a href="./finance.html">전자금융거래 약관</a></li>
-                    <li><a href="./location.html">위치정보이용 약관</a></li>                      
-                    <li><a href="./privacy.html">개인정보수집 방침</a></li>
+			        <li class="on"><a th:href="@{/policy/buyer}">구매회원 약관</a></li>
+			        <li><a th:href="@{/policy/sellerpolicy}">판매회원 약관</a></li>                    
+			        <li><a th:href="@{/policy/finance}">전자금융거래 약관</a></li>
+			        <li><a th:href="@{/policy/location}">위치정보이용 약관</a></li>                      
+			        <li><a th:href="@{/policy/privacy}">개인정보수집 방침</a></li>
                   </ul>
                 </nav>
                 <article>
                   <h2>구매회원 이용약관</h2>
                   <p>
-                    <span class="tit">제1조(목적)</span>
-                    <span class="content">이 약관은 주식회사 롯데ON(이하 “회사”라 함)가 운영하는 “K마켓” 인터넷 오픈마켓 사이트 (www.gmarket.co.kr, 이하 “K마켓”이라 함)와 스마트폰 등 이동통신기기를 통해 제공되는 ‘K마켓’ 모바일 애플리케이션(이하 “모바일K마켓”이라고 합니다)을 통해서 제공하는 전자상거래 관련 서비스 및 기타 서비스 (이하 “서비스”라 함)를 이용하는 자간의 권리, 의무를 확정하고 이를 이행함으로써 상호 발전을 도모하는 것을 그 목적으로 합니다.</span>
+					<span class="tit">제1조(목적)</span><br>
+                    <span style=" max-height: 300px; overflow-y: auto;" class="content">
+					이 약관은 주식회사 케이마켓(이하 “회사”라 함)가 운영하는 “K마켓” 인터넷 오픈마켓 사이트 (www.kmarket.co.kr, 이하 “K마켓”이라 함)와 스마트폰 등 이동통신기기를 통해 제공되는 ‘K마켓’ 모바일 애플리케이션(이하 “모바일K마켓”이라고 합니다)을 통해서 제공하는 전자상거래 관련 서비스 및 기타 서비스 (이하 “서비스”라 함)를 이용하는 자간의 권리, 의무를 확정하고 이를 이행함으로써 상호 발전을 도모하는 것을 그 목적으로 합니다.
+					</span>
                   </p>
                   <p>
-                    <span class="tit">제2조(약관의 명시, 효력과 개정)</span>
-                    <span class="content">
-                      1. 회사는 이 약관의 내용을 회사의 상호, 영업소 소재지, 대표자의 성명, 사업자등록번호, 연락처(전화, 팩스, 전자우편주소 등)등과 함께 회원이 확인할 수 있도록 “K마켓” 초기 서비스화면 또는 연결화면에 게시합니다.<br>
-                      2. 회사는 약관의규제에관한법률, 전자문서 및 전자거래기본법, 전자서명법, 정보통신망이용촉진및정보보호등에관한법률, 전자상거래등에서의소비자보호에관한법률, 전자금융거래법 등 관련법을 위배하지 않는 범위에서 본 약관을 개정할 수 있습니다.<br>
-                      3. 회사가 약관을 개정할 경우에는 적용일자 및 개정사유를 명시하여 현행 약관과 함께 초기화면에 그 적용일자 14일 이전부터 적용일자 전일까지 공지합니다.다만, 변경 내용이 중대하거나 구매회원에게 불리한 경우에는 그 적용일자 30일 이전부터 적용일자 전일까지 공지하고 구매회원에게 개별 통지합니다.변경된 약관은 그 적용일자 이전으로 소급하여 적용되지 아니합니다.<br>
-                    </span>
-                  </p>                  
-                  <p>
-                    <span class="tit">제3조</span>
-                    <span class="content">약관 내용 별도 제공</span>
+					<span class="tit">제2조(약관의 명시, 효력과 개정)</span><br>
+                    <span style=" max-height: 300px; overflow-y: auto;" class="content">
+						1. 회사는 이 약관의 내용을 회사의 상호, 영업소 소재지, 대표자의 성명, 사업자등록번호, 연락처(전화, 팩스, 전자우편주소 등)등과 함께 회원이 확인할 수 있도록 “K마켓” 초기 서비스화면 또는 연결화면에 게시합니다.
+						2. 회사는 약관의규제에관한법률, 전자문서 및 전자거래기본법, 전자서명법, 정보통신망이용촉진및정보보호등에관한법률, 전자상거래등에서의소비자보호에관한법률, 전자금융거래법 등 관련법을 위배하지 않는 범위에서 본 약관을 개정할 수 있습니다.
+						3. 회사가 약관을 개정할 경우에는 적용일자 및 개정사유를 명시하여 현행 약관과 함께 초기화면에 그 적용일자 14일 이전부터 적용일자 전일까지 공지합니다.다만, 변경 내용이 중대하거나 구매회원에게 불리한 경우에는 그 적용일자 30일 이전부터 적용일자 전일까지 공지하고 구매회원에게 개별 통지합니다.변경된 약관은 그 적용일자 이전으로 소급하여 적용되지 아니합니다
+					</span>
                   </p>
                   <p>
-                    <span class="tit">제4조</span>
-                    <span class="content">약관 내용 별도 제공</span>
+					<span class="tit">제3조 (용어의 정의)</span><br>
+                    <span style=" max-height: 300px; overflow-y: auto;" class="content">
+					1. 이 약관에서 사용하는 용어의 정의는 다음과 같습니다.
+					1) 회원: 회사에 개인정보를 제공하여 회원등록을 한 개인 또는 법인으로서, 다음과 같이 일반회원과 판매회원으로 구분이 됩니다.
+					① 일반회원(구매자): 회사에서 제공하는 구매서비스를 이용할 수 있는 14세 이상의 개인이나 법인
+					② 판매회원(판매자): 회사에서 제공하는 구매서비스 및 판매서비스를 이용할 수 있는 14세 이상의 개인이나 법인
+					2) 아이디(ID): 회원의 식별과 서비스 이용을 위하여 회원이 설정하고 회사가 승인하여 등록된 문자와 숫자의 조합을 말합니다.
+					3) 비밀번호: 회원의 동일성 확인과 회원의 권익 및 비밀보호를 위하여 회원 스스로가 설정하여 회사에 등록한 영문과 숫자의 조합을 말합니다.
+					4) 운영자: 회사가 제공하는 서비스의 전반적인 관리와 원활한 운영을 위하여 회사에서 선정한 자를 말합니다.
+					5) 구매안전서비스: 회사가 구매자의 결제대금의 보호를 위하여 일정 기간 동안 결제대금을 예치하는 서비스를 말합니다.
+					6) 안전거래센터: 회사 서비스 이용 중 거래의 안전과 관련하여 발생할 수 있는 제 문제를 조정하기 위한 기구를 말합니다.
+					7) 분쟁조정센터: 원칙적으로 회사를 통한 거래에 따른 분쟁은 판매자와 구매자 간의 자율적인 해결이 원칙이지만, 예외적으로 분쟁의 합리적이고 원활한 조정을 위하여 회사가 설치 및 운영하는 분쟁조정기구를 말합니다.
+					8) 제휴사 포인트 : 회사와 제휴관계가 있는 제3자가 제공하는 각종 포인트를 말합니다.
+					9) 아이템할인: 판매자가 회사의 서비스를 통하여 물품을 판매할 때 회사와의 합의에 따라 서비스이용료 범위 내에서 특정물품의 판매가격을 할인하는 것을 말합니다. 회사는 아이템할인으로 인한 특정물품 판매가격 할인액을 해당 서비스 화면에 게재합니다.
+					10) 에누리쿠폰(구매쿠폰): 회원이 회사의 서비스를 통하여 물품을 구매할 때 표시된 금액 또는 비율만큼 물품대금에서 할인 받을 수 있는 회사 전용의 사이버 또는 오프라인 쿠폰을 말합니다. 회사는 판매자의 동의(승인을 포함하며 이하 같다)가 있는 경우에 한하여 에누리쿠폰(구매쿠폰)이 적용된 물품판매거래를 중개할 수 있으며, 판매자의 동의가 없는 경우에는 당해 거래를 신속히 취소 처리합니다.
+					11) 바이어쿠폰: 회원이 회사의 서비스를 통하여 물품을 구매할 때 표시된 금액 또는 비율만큼 물품대금에서 할인 받을 수 있는 회사 전용의 사이버 또는 오프라인 쿠폰을 말합니다. 회사는 판매자의 동의 없이 회원에게 바이어쿠폰을 발행할 수 있습니다.
+					2. 제1항에서 정의되지 않은 이 약관상의 용어의 의미는 일반적인 거래관행에 의합니다.
+					</span>
                   </p>
                   <p>
-                    <span class="tit">제5조</span>
-                    <span class="content">약관 내용 별도 제공</span>
+					<span class="tit">제4조 (서비스의 종류)</span><br>
+                    <span style=" max-height: 300px; overflow-y: auto;" class="content">
+					1. 회사가 제공하는 서비스는 다음과 같습니다.
+					1) E-Commerce Platform 개발 및 운영서비스
+					① 판매관련 업무지원서비스
+					② 구매관련 지원서비스
+					③ 매매계약체결 관련 서비스
+					④ 상품 정보검색 서비스
+					⑤ 기타 전자상거래 관련 서비스
+					2) 광고 집행 및 프로모션 서비스
+					2. 회사가 제공하는 전항의 서비스는 회원이 재화 등을 거래할 수 있도록 사이버몰의 이용을 허락하거나, 통신판매를 알선하는 것을 목적으로 하며, 개별 판매회원(판매자)이 K마켓과 모바일K마켓에 등록한 상품과 관련해서는 일체의 책임을 지지 않습니다.
+					</span>
                   </p>
                   <p>
-                    <span class="tit">제6조</span>
-                    <span class="content">약관 내용 별도 제공</span>
+					<span class="tit">제5조 (대리행위의 부인)</span><br>
+                    <span style=" max-height: 300px; overflow-y: auto;" class="content">
+					회사는 통신판매중개자로서 효율적인 서비스를 위한 시스템 운영 및 관리 책임만을 부담하며, 재화 또는 용역의 거래와 관련하여 구매자 또는 판매자를 대리하지 아니하고, 회원 사이에 성립된 거래 및 회원이 제공하고 등록한 정보에 대해서는 해당 회원이 그에 대한 직접적인 책임을 부담하여야 합니다.
+					</span>
                   </p>
                   <p>
-                    <span class="tit">제7조</span>
-                    <span class="content">약관 내용 별도 제공</span>
-                  </p>
-                  <p>
-                    <span class="tit">제8조</span>
-                    <span class="content">약관 내용 별도 제공</span>
-                  </p>
-                  <p>
-                    <span class="tit">제9조</span>
-                    <span class="content">약관 내용 별도 제공</span>
-                  </p>
-                  <p>
-                    <span class="tit">제10조</span>
-                    <span class="content">약관 내용 별도 제공</span>
+					<span class="tit">제6조 (보증의 부인)</span><br>
+                    <span style=" max-height: 300px; overflow-y: auto;" class="content">
+						이 약관은 주식회사 케이마켓(이하 “회사”라 함)가 운영하는 “K마켓” 인터넷 오픈마켓 사이트 (www.kmarket.co.kr, 이하 “K마켓”이라 함)와 스마트폰 등 이동통신기기를 통해 제공되는 ‘K마켓’ 모바일 애플리케이션(이하 “모바일K마켓”이라고 합니다)을 통해서 제공하는 전자상거래 관련 서비스 및 기타 서비스 (이하 “서비스”라 함)를 이용하는 자간의 권리, 의무를 확정하고 이를 이행함으로써 상호 발전을 도모하는 것을 그 목적으로 합니다.
+					</span>
                   </p>
                 </article>
             </section>
-
-        </main>
-
-        <footer>
-          <ul>
-            <li><a href="#">회사소개</a></li>
-            <li><a href="#">서비스이용약관</a></li>
-            <li><a href="#">개인정보처리방침</a></li>
-            <li><a href="#">전자금융거래약관</a></li>
-          </ul>
-          <div>
-            <p><img src="../images/footer_logo.png" alt="로고" /></p>
-            <p>
-              <strong>(주)롯데ON</strong><br />
-              서울특별시 송파구 올림픽로 300 롯데월드타워 26층 (역삼동 강남파이낸스센터)<br />
-              대표이사 : 김사무엘상현, 정준호, 강성현<br />
-              사업자등록번호 : 529-85-00774(롯데쇼핑(주) e커머스사업부)<br />
-              통신판매업 신고 : 서울송파 제0158호<br>
-              호스팅 서비스사업자 : 롯데쇼핑(주) e커머스사업부
-            </p>
-            <p>
-              <strong>고객센터</strong><br />
-              Tel : 1899-7000(유료) (평일 09:00~18:00)<br />
-              Fax : 051-123-4567 | E-mail : lotteon@lotte.net<br />
-            </p>
-          </div>
-        </footer>
-    </div>
-</body>
 </html>
