--- a/src/main/resources/templates/policy/finance.html
+++ b/src/main/resources/templates/policy/finance.html
@@ -1,205 +1,175 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>구매회원 약관</title>
-    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css"/>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css"/>
-    <link rel="stylesheet" href="../css/common.css" />
-    <link rel="stylesheet" href="./css/style.css" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-    <script src="https://kit.fontawesome.com/20962f3e4b.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>    
-</head>
-<body>
-    <div id="wrapper">
-        <header>
-          <div class="top">
-            <div>
-                <a href="#">로그인</a>
-                <a href="#">회원가입</a>
-                <a href="#">마이페이지</a>
-                <a href="#"><i class="fa fa-shopping-cart" aria-hidden="true"></i>&nbsp;장바구니</a>
-            </div>
-        </div>
-        <div class="logo">
-            <div>
-              <a href="#"><img src="../images/header_logo.png" alt="로고" /></a>
-                <form action="#">
-                    <input type="text" name="search"/>
-                    <button><i class="fa fa-search"></i></button>
-                </form>                
-            </div>            
-        </div>
-            <div class="menu">
-                <div>
-                    <ul>
-                        <li><a href="#">히트상품</a></li>
-                        <li><a href="#">추천상품</a></li>
-                        <li><a href="#">최신상품</a></li>
-                        <li><a href="#">인기상품</a></li>
-                        <li><a href="#">할인상품</a></li>
-                    </ul>
-                    <ul>
-                        <li><a href="#">공지사항</a></li>
-                        <li><a href="#">자주묻는질문</a></li>
-                        <li><a href="#">문의하기</a></li>
-                        <li><a href="#">고객센터</a></li>
-                    </ul>
-                </div>
-            </div>
-        </header>
-
-        <main id="termsPolicy">
-            <aside>
-                <!-- 카테고리 -->
-                <ul class="category">
-                  <li><i class="fa fa-bars" aria-hidden="true"></i>카테고리</li>
-                  <li>
-                    <a href="#"
-                      ><i class="fas fa-tshirt"></i>패션·의류·뷰티<i
-                        class="fas fa-angle-right"
-                      ></i
-                    ></a>
-                    <ol>
-                      <li><a href="#">남성의류</a></li>
-                      <li><a href="#">여성의류</a></li>
-                      <li><a href="#">잡화</a></li>
-                      <li><a href="#">뷰티</a></li>
-                    </ol>
-                  </li>
-                  <li>
-                    <a href="#"
-                      ><i class="fas fa-laptop"></i>가전·디지털<i
-                        class="fas fa-angle-right"
-                      ></i
-                    ></a>
-                    <ol>
-                      <li><a href="#">노트북/PC</a></li>
-                      <li><a href="#">가전</a></li>
-                      <li><a href="#">휴대폰</a></li>
-                      <li><a href="#">기타</a></li>
-                    </ol>
-                  </li>
-                  <li>
-                    <a href="#"
-                      ><i class="fas fa-utensils"></i>식품·생필품<i
-                        class="fas fa-angle-right"
-                      ></i
-                    ></a>
-                    <ol>
-                      <li><a href="#">신선식품</a></li>
-                      <li><a href="#">가공식품</a></li>
-                      <li><a href="#">건강식품</a></li>
-                      <li><a href="#">생필품</a></li>
-                    </ol>
-                  </li>
-                  <li>
-                    <a href="#"
-                      ><i class="fas fa-home"></i>홈·문구·취미<i
-                        class="fas fa-angle-right"
-                      ></i
-                    ></a>
-                    <ol>
-                      <li><a href="#">가구/DIY</a></li>
-                      <li><a href="#">침구·커튼</a></li>
-                      <li><a href="#">생활용품</a></li>
-                      <li><a href="#">사무용품</a></li>
-                    </ol>
-                  </li>
-                </ul>
-            </aside>
-            
-            <section class="seller">
-                <nav>
-                  <h1>LotteON 서비스 이용약관</h1>
-                  <ul>
-                    <li><a href="./buyer.html">구매회원 약관</a></li>
-                    <li><a href="./seller.html">판매회원 약관</a></li>                    
-                    <li class="on"><a href="./finance.html">전자금융거래 약관</a></li>
-                    <li><a href="./location.html">위치정보이용 약관</a></li>                      
-                    <li><a href="./privacy.html">개인정보수집 방침</a></li>
-                  </ul>
-                </nav>
-                <article>
-                  <h2>전자금융거래 이용약관</h2>
-                  <p>
-                    <span class="tit">제1조(목적)</span>
-                    <span class="content">이 약관은 주식회사 롯데ON(이하 “회사”라 함)가 운영하는 “K마켓” 인터넷 오픈마켓 사이트 (www.gmarket.co.kr, 이하 “K마켓”이라 함)와 스마트폰 등 이동통신기기를 통해 제공되는 ‘K마켓’ 모바일 애플리케이션(이하 “모바일K마켓”이라고 합니다)을 통해서 제공하는 전자상거래 관련 서비스 및 기타 서비스 (이하 “서비스”라 함)를 이용하는 자간의 권리, 의무를 확정하고 이를 이행함으로써 상호 발전을 도모하는 것을 그 목적으로 합니다.</span>
-                  </p>
-                  <p>
-                    <span class="tit">제2조(약관의 명시, 효력과 개정)</span>
-                    <span class="content">
-                      1. 회사는 이 약관의 내용을 회사의 상호, 영업소 소재지, 대표자의 성명, 사업자등록번호, 연락처(전화, 팩스, 전자우편주소 등)등과 함께 회원이 확인할 수 있도록 “K마켓” 초기 서비스화면 또는 연결화면에 게시합니다.<br>
-                      2. 회사는 약관의규제에관한법률, 전자문서 및 전자거래기본법, 전자서명법, 정보통신망이용촉진및정보보호등에관한법률, 전자상거래등에서의소비자보호에관한법률, 전자금융거래법 등 관련법을 위배하지 않는 범위에서 본 약관을 개정할 수 있습니다.<br>
-                      3. 회사가 약관을 개정할 경우에는 적용일자 및 개정사유를 명시하여 현행 약관과 함께 초기화면에 그 적용일자 14일 이전부터 적용일자 전일까지 공지합니다.다만, 변경 내용이 중대하거나 구매회원에게 불리한 경우에는 그 적용일자 30일 이전부터 적용일자 전일까지 공지하고 구매회원에게 개별 통지합니다.변경된 약관은 그 적용일자 이전으로 소급하여 적용되지 아니합니다.<br>
-                    </span>
-                  </p>
-                  <p>
-                    <span class="tit">제3조</span>
-                    <span class="content">약관 내용 별도 제공</span>
-                  </p>
-                  <p>
-                    <span class="tit">제4조</span>
-                    <span class="content">약관 내용 별도 제공</span>
-                  </p>
-                  <p>
-                    <span class="tit">제5조</span>
-                    <span class="content">약관 내용 별도 제공</span>
-                  </p>
-                  <p>
-                    <span class="tit">제6조</span>
-                    <span class="content">약관 내용 별도 제공</span>
-                  </p>
-                  <p>
-                    <span class="tit">제7조</span>
-                    <span class="content">약관 내용 별도 제공</span>
-                  </p>
-                  <p>
-                    <span class="tit">제8조</span>
-                    <span class="content">약관 내용 별도 제공</span>
-                  </p>
-                  <p>
-                    <span class="tit">제9조</span>
-                    <span class="content">약관 내용 별도 제공</span>
-                  </p>
-                  <p>
-                    <span class="tit">제10조</span>
-                    <span class="content">약관 내용 별도 제공</span>
-                  </p>
-                </article>
-            </section>
-
-        </main>
-
-        <footer>
-          <ul>
-            <li><a href="#">회사소개</a></li>
-            <li><a href="#">서비스이용약관</a></li>
-            <li><a href="#">개인정보처리방침</a></li>
-            <li><a href="#">전자금융거래약관</a></li>
-          </ul>
-          <div>
-            <p><img src="../images/footer_logo.png" alt="로고" /></p>
-            <p>
-              <strong>(주)롯데ON</strong><br />
-              서울특별시 송파구 올림픽로 300 롯데월드타워 26층 (역삼동 강남파이낸스센터)<br />
-              대표이사 : 김사무엘상현, 정준호, 강성현<br />
-              사업자등록번호 : 529-85-00774(롯데쇼핑(주) e커머스사업부)<br />
-              통신판매업 신고 : 서울송파 제0158호<br>
-              호스팅 서비스사업자 : 롯데쇼핑(주) e커머스사업부
-            </p>
-            <p>
-              <strong>고객센터</strong><br />
-              Tel : 1899-7000(유료) (평일 09:00~18:00)<br />
-              Fax : 051-123-4567 | E-mail : lotteon@lotte.net<br />
-            </p>
-          </div>
-        </footer>
-    </div>
-</body>
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.thymeleaf.org/"
+	  layout:decorate="/policy/policyindex.html">            
+<section layout:fragment="content">
+    <nav>
+      <h1>LotteON 서비스 이용약관</h1>
+      <ul>
+        <li><a th:href="@{/policy/buyer}">구매회원 약관</a></li>
+        <li><a th:href="@{/policy/sellerpolicy}">판매회원 약관</a></li>                    
+        <li class="on"><a th:href="@{/policy/finance}">전자금융거래 약관</a></li>
+        <li><a th:href="@{/policy/location}">위치정보이용 약관</a></li>                      
+        <li><a th:href="@{/policy/privacy}">개인정보수집 방침</a></li>
+      </ul>
+    </nav>
+    <article>
+      <h2>전자금융거래 이용약관</h2>
+      <p>
+		<span class="tit">제1조(목적)</span><br>
+        <span style=" max-height: 300px; overflow-y: auto;" class="content">
+		본 약관은 주식회사 케이마켓(이하 '회사'라 합니다)가 제공하는 전자금융거래서비스를 다음 각 호의 인터넷사이트 등(이하 ‘인터넷사이트’라 합니다)을 통하여 가입한 이용자가 온라인 또는 오프라인으로 이용하는 경우, 회사와 이용자 간 전자금융거래의 법률관계를 정함에 그 목적이 있습니다.
+		1. 옥션 사이트 (http://www.auction.co.kr/)
+		2. K마켓 사이트 (http://www.kmarket.co.kr/)
+		3. 그 밖에 회사가 운영하는 인터넷사이트</span>
+      </p>
+      <p>
+		<span class="tit">제2조 (정의)</span><br>
+        <span style=" max-height: 300px; overflow-y: auto;" class="content">
+		① 이 약관에서 정하는 용어의 정의는 다음 각호와 같습니다.
+		1.‘전자금융거래’라 함은 전자금융거래에 있어서 거래지시를 하거나 이용자 및 거래내용의 진실성과 정확성을 확보하기 위하여 사용되는 수단 또는 정보로서, 전자식 카드 및 이에 준하는 전자적 정보(신용카드번호를 포함합니다), 전자서명법상의 전자서명생성정보 및 인증서, 이상의 수단이나 정보를 사용하는데 필요한 비밀번호, 금융기관 또는 전자금융업자에 등록된 이용자번호 및 이용자의 생체정보 등 전자금융거래법 제2조 제10호에서 정하고 있는 것을 말합니다.
+		2. ‘전자지급수단’이라 함은 선불전자지급수단, 신용카드 등 전자금융거래법 제2조 제11호에서 정하는 전자적 방법에 따른 지급수단을 말합니다.
+		3. ‘전자지급거래’라 함은 자금을 주는 자(이하 ‘지급인’이라 합니다)가 회사로 하여금 전자지급수단을 이용하여 자금을 받는 자(이하 ‘수취인’이라 합니다)에게 자금을 이동하게 하는 전자금융거래를 말합니다.
+		4. ‘전자적 장치’ 라 함은 전자금융거래정보를 전자적 방법으로 전송하거나 처리하는데 이용되는 장치로서 현금자동지급기, 자동입출금기, 지급용단말기, 컴퓨터, 전화기 그 밖에 전자적 방법으로 정보를 전송하거나 처리하는 장치를 말합니다.
+		5. ‘접근매체’라 함은 전자금융거래에 있어서 거래지시를 하거나 이용자 및 거래내용의 진실성과 정확성을 확보하기 위하여 사용되는 수단 또는 정보로서, 전자식 카드 및 이에 준하는 전자적 정보(신용카드번호를 포함합니다), 전자서명법상의 전자서명생성정보 및 인증서, 이상의 수단이나 정보를 사용하는데 필요한 비밀번호, 금융기관 또는 전자금융업자에 등록된 이용자번호 및 이용자의 생체정보 등 전자금융거래법 제2조 제10호에서 정하고 있는 것을 말합니다.
+		6. ‘전자금융거래서비스’ 또는 ‘서비스’라 함은 회사가 이용자에게 제공하는 제4조 기재의 서비스를 말합니다.
+		7. ‘이용자’라 함은 제2장 내지 제4장에서 달리 정한 것을 제외하고는 본 이용약관에 동의하고 회사가 제공하는 전자금융거래서비스를 이용하는 회원을 말합니다.
+		8. '거래지시'라 함은 이용자가 전자금융거래계약에 따라 금융기관 또는 전자금융업자에게 전자금융거래의 처리를 지시하는 것을 말합니다.
+		9. '오류'라 함은 이용자의 고의 또는 과실 없이 전자금융거래가 전자금융거래계약 또는 이용자의 거래지시에 따라 이행되지 아니한 경우를 말합니다.
+		10. '이용자번호'란 이용자의 동일성 식별과 서비스 이용을 위하여 이용자가 설정하고 회사가 승인한 숫자와 문자의 조합을 말합니다.
+		11. '비밀번호'란 이용자의 동일성 식별과 회원정보의 보호를 위하여 이용자가 설정하고 회사가 승인한 숫자와 문자의 조합을 말합니다.
+		12. ‘가맹점’이란 회사와의 계약에 따라 전자지급수단에 의한 거래에 있어서 이용자에게 재화 또는 용역을 온라인 또는 오프라인으로 제공하는 자를 말합니다.
+		② 본 약관에서 사용하는 용어의 의미는 본 조 및 본 약관 각 장의 정의조항에서 정한 것을 제외하고는 전자금융거래법 등 관련법령이 정한 바에 의합니다.
+		</span>
+      </p>
+      <p>
+		<span class="tit">제3조 (약관의 명시 및 변경)</span><br>
+        <span style=" max-height: 300px; overflow-y: auto;" class="content">
+		① 회사는 이용자가 전자금융거래를 하기 전에 본 약관을 인터넷사이트에 게시하고 이용자가 본 약관의 중요한 내용을 확인할 수 있도록 합니다.
+		② 회사는 이용자의 요청이 있는 경우 전자문서 전송(전자우편을 이용한 전송을 포함합니다), 모사전송, 우편 또는 직접교부의 방식으로 본 약관의 사본을 이용자에게 교부하고 그 약관의 내용을 설명합니다.
+		③ 회사가 본 약관을 변경하는 때에는 그 시행일 1개월 전에 변경되는 약관을 금융거래정보 입력화면(주문서), 인터넷사이트에 게시하고 이용자에게 통지합니다. 다만, 이용자가 이의를 제기할 경우 회사는 이용자에게 적절한 방법으로 약관 변경내용을 통지하였음을 확인해 줍니다.
+		④ 회사가 제3항의 게시나 통지를 하는 경우에는 “이용자가 약관의 변경내용이 게시되거나 통지된 후부터 변경되는 약관의시행일 전의 영업일까지 계약을 해지할 수 있으며, 약관의 변경내용에 이의를 제기하지 아니하는 경우 약관의 변경내용에 승인한 것으로 본다.”라는 취지의 내용을 통지하여야 합니다.
+		⑤ 이용자는 제3항의 규정에 따른 약관의 변경내용이 게시되거나 통지된 후부터 변경되는 약관의 시행일 직전 영업일까지 전자금융거래의 계약을 해지할 수 있습니다. 전단의 기간 안에 이용자가 약관의 변경내용에 대하여 이의를 제기하지 아니하는 경우에는 약관의 변경을 승인한 것으로 봅니다.
+		⑥ 회사는 법령의 개정으로 인하여 긴급하게 약관을 변경하는 때에는 변경된 약관을 즉시 인터넷사이트(전자적 장치)에 최소 1월 이상 게시하고 이용자에게 통지합니다.
+		</span>
+      </p>
+      <p>
+		<span class="tit">제4조 (전자금융거래서비스의 구성 및 내용)</span><br>
+        <span style=" max-height: 300px; overflow-y: auto;" class="content">
+		① 전자금융거래서비스는 다음 각호의 서비스로 구성되며 회사는 각 서비스의 자세한 내용을 인터넷사이트에 별도 게시합니다.
+		1. 전자지급결제대행서비스
+		2. 결제대금예치서비스 (매매보호서비스)
+		3. 선불전자지급수단발행관리서비스
+		② 회사는 필요시 이용자에 사전 고지하고 서비스의 내용을 변경할 수 있습니다.
+		</span>
+      </p>
+      <p>
+		<span class="tit">제5조 (거래내용의 확인)</span><br>
+        <span style=" max-height: 300px; overflow-y: auto;" class="content">
+		① 회사는 인터넷사이트의 해당 서비스 조회 화면을 통하여 각 이용자의 거래내용(이용자의 '오류정정 요구사실 및 처리결과에 관한 사항'을 포함합니다)을 확인할 수 있도록 하며, 이용자의 거래내용 서면교부 요청이 있는 경우에는 요청을 받은 날로부터 2주 이내에 모사전송, 우편 또는 직접 교부의 방법으로 거래내용에 관한 서면을 교부합니다.
+		② 회사는 제1항에 따른 이용자의 거래내용 서면교부 요청을 받은 경우 전자적 장치의 운영장애, 그 밖의 사유로 거래내용을 제공할 수 없는 때에는 즉시 이용자에게 전자문서 전송(전자우편을 이용한 전송을 포함합니다)의 방법으로 그러한 사유를 알려야 하며, 전자적 장치의 운영장애 등의 사유로 거래내용을 제공할 수 없는 기간은 제1항의 거래내용에 관한 서면의 교부기간에 산입하지 아니합니다.
+		③ 제1항의 대상이 되는 거래내용 중 대상기간이 5년인 것은 다음 각호와 같습니다.
+		1. 거래계좌의 명칭 또는 번호
+		2. 거래의 종류 및 금액
+		3. 거래상대방을 나타내는 정보
+		4. 거래일시
+		5. 전자적 장치의 종류 및 전자적 장치를 식별할 수 있는 정보
+		6. 회사가 전자금융거래의 대가로 받은 수수료
+		7. 이용자의 출금 동의에 관한 사항
+		8. 해당 전자금융거래와 관련한 전자적 장치의 접속기록
+		9. 전자금융거래의 신청 및 조건의 변경에 관한 사항
+		10. 건당 거래금액이 1만원을 초과하는 전자금융거래에 관한 기록
+		④ 제1항의 대상이 되는 거래내용 중 확인대상기간이 1년인 것은 다음 각호와 같습니다.
+		1. 건당 거래금액이 1만원 이하인 소액 전자금융거래에 관한 기록
+		2. 전자지급수단 이용과 관련된 거래승인에 관한 기록
+		3. 이용자의 오류정정 요구사실 및 처리결과에 관한 사항
+		⑤ 이용자가 제1항에서 정한 서면교부를 요청하고자 할 경우 다음의 주소 및 전화번호로 요청할 수 있습니다.
+		1. 옥션 사이트의 경우
+		주소: 경기도 부천시 원미구 상동 461 투나빌딩 9층
+		이메일 주소: mediation@corp.auction.co.kr
+		전화번호: 1588-0184
+		2. K마켓 사이트의 경우
+		주소: 경기도 부천시 원미구 상동 461 투나빌딩 9층
+		이메일 주소: gmk_cs@corp.kmarket.co.kr
+		전화번호: 1566-5701
+		3. G9 사이트의 경우
+		주소: 경기도 부천시 원미구 상동 461 투나빌딩 9층
+		이메일 주소: g9@g9.co.kr
+		전화번호: 1644-5702
+		4. 그 밖에 회사가 운영하거나 지정하는 각 인터넷사이트 초기화면에 게시된 고객센터의 주소, 이메일 주소 및 전화번호
+		</span>
+      </p>
+      <p>
+		<span class="tit">제6조 (오류의 정정 등)</span><br>
+        <span style=" max-height: 300px; overflow-y: auto;" class="content">
+		① 이용자는 전자금융거래서비스를 이용함에 있어 오류가 있음을 안 때에는 회사에 대하여 그 정정을 요구할 수 있습니다.
+		② 회사는 전항의 규정에 따른 오류의 정정요구를 받은 때 또는 스스로 전자금융거래에 오류가 있음을 안 때에는 이를 즉시 조사하여 처리한 후 정정요구를 받은 날 또는 오류가 있음을 안 날부터 2주 이내에 그 오류의 원인과 처리결과를 문서, 전화 또는 전자우편으로 이용자에게 알려 드립니다. 다만, 이용자의 요청이 있는 경우에는 문서로 알려 드립니다.
+		</span>
+      </p>
+      <p>
+		<span class="tit">제7조 (전자금융거래 기록의 생성 및 보존)</span><br>
+        <span style=" max-height: 300px; overflow-y: auto;" class="content">
+		① 회사는 이용자가 이용한 전자금융거래의 내용을 추적, 검색하거나 그 내용에 오류가 발생한 경우에 이를 확인하거나 정정할 수 있는 기록을 생성하여 보존합니다.
+		② 전항의 규정에 따라 회사가 보존하여야 하는 기록의 종류 및 보존기간은 제5조 제3항, 제4항에서 정한 바에 따릅니다.
+		</span>
+      </p>
+      <p>
+		<span class="tit">제8조 (거래지시의 철회)</span><br>
+        <span style=" max-height: 300px; overflow-y: auto;" class="content">
+		① 이용자가 전자지급거래를 한 경우, 이용자는 지급의 효력이 발생하기 전까지 본 약관 제5조 제5항에 기재된 연락처로 전자문서를 전송(전자우편을 이용한 전송을 포함합니다)하는 방법 또는 회사가 고지하는 방법으로 거래지시를 철회할 수 있습니다. 각 서비스별 거래지시 철회의 효력 발생시기는 본 약관 제16조, 제20조 및 제26조에서 정하는 바와 같습니다.
+		② 이용자는 전자지급의 효력이 발생한 경우에 전자상거래등에서의 소비자보호에 관한 법률 등 관련 법령상 청약의 철회의 방법에 따라 결제대금을 반환 받을 수 있습니다.
+		</span>
+      </p>
+      <p>
+		<span class="tit">제9조 (전자금융거래정보의 제공금지)</span><br>
+        <span style=" max-height: 300px; overflow-y: auto;" class="content">
+		회사는 전자금융거래서비스를 제공함에 있어서 취득한 이용자의 인적사항, 이용자의 계좌, 접근매체 및 전자금융거래의 내용과 실적에 관한 정보 또는 자료를 금융실명법 등 법령에 의하거나 이용자의 동의를 얻지 아니하고는 제3자에게 제공, 누설하거나 업무상 목적 외에 사용하지 아니합니다.
+		</span>
+      </p>
+      <p>
+		<span class="tit">제10조 (회사의 책임)</span><br>
+        <span style=" max-height: 300px; overflow-y: auto;" class="content">
+		① 회사는 다음 각 호의 어느 하나에 해당하는 사고로 인하여 이용자에게 손해가 발생한 경우에는 그 손해를 배상할 책임을 집니다.
+		1. 접근매체의 위조나 변조로 발생한 사고
+		2. 계약체결 또는 거래지시의 전자적 전송이나 처리 과정에서 발생한 사고
+		3. 전자금융거래를 위한 전자적 장치 또는 정보통신망 이용촉진 및 정보보호 등에 관한 법률 제2조 제1항 제1호에 따른 정보통신망에 침입하여 거짓이나 그 밖의 부정한 방법으로 획득한 접근매체의 이용으로 발생한 사고
+		② 회사는 제1항에도 불구하고 다음 각호의 어느 하나에 해당하는 경우에는 책임의 전부 또는 일부를 이용자가 부담하게 할 수 있습니다.
+		1. 이용자가 접근매체를 제3자에게 대여하거나 그 사용을 위임한 경우 또는 양도나 담보의 목적으로 제공한 경우
+		2. 제3자가 권한 없이 이용자의 접근매체를 이용하여 전자금융거래를 할 수 있음을 알았거나 쉽게 알 수 있었음에도 불구하고 접근매체를 누설하거나 노출 또는 방치한 경우
+		3. 회사가 전자금융거래법 제6조제1항에 따른 확인 외에 보안강화를 위하여 전자금융거래 시 요구하는 추가적인 보안조치를 이용자가 정당한 사유 없이 거부하여 위 제1항 제3호에 따른 사고가 발생한 경우
+		4. 이용자가 제3호에 따른 추가적인 보안조치에 사용되는 매체·수단 또는 정보에 대하여 다음 각 목의 어느 하나에 해당하는 행위를 하여 위 제1항제3호에 따른 사고가 발생한 경우
+		가. 누설·노출 또는 방치한 행위
+		나. 제3자에게 대여하거나 그 사용을 위임한 행위 또는 양도나 담보의 목적으로 제공한 행위
+		5. 법인('중소기업기본법' 제2조 제2항에 의한 소기업을 제외합니다)인 이용자에게 손해가 발생한 경우로서 회사가 사고를 방지하기 위하여 보안절차를 수립하고 이를 철저히 준수하는 등 합리적으로 요구되는 충분한 주의의무를 다한 경우
+		③ 회사는 이용자로부터의 거래지시가 있음에도 불구하고 컴퓨터 등 정보통신설비의 보수점검, 교체 및 고장, 통신의 두절 등의 사유가 발생한 경우에는 전자금융서비스의 제공을 일시적으로 중단할 수 있으며, 이로 인하여 이용자에게 손해가 발생한 경우에는 그 손해를 배상할 책임을 집니다.
+		</span>
+      </p>
+      <p>
+		<span class="tit">제11조 (분쟁처리 및 분쟁조정)</span><br>
+        <span style=" max-height: 300px; overflow-y: auto;" class="content">
+		① 이용자는 인터넷사이트 초기 화면에 게시된 분쟁처리 책임자 및 담당자 연락처를 통하여 전자금융거래와 관련한 의견 및 불만의 제기, 손해배상의 청구 등의 분쟁처리를 요구할 수 있습니다.
+		② 이용자는 제1항에 따라 서면(전자문서를 포함합니다) 또는 전자적 장치를 이용하여 회사의 본점이나 영업점에 분쟁처리를 신청할 수 있으며, 회사는 15일 이내에 이에 대한 조사 또는 처리 결과를 이용자에게 안내합니다.
+		③ 이용자는 회사의 분쟁처리결과에 대하여 이의가 있을 경우 '금융위원회의 설치 등에 관한 법률'에 따른 금융감독원의 금융분쟁조정위원회나 '소비자기본법'에 따른 한국소비자원의 소비자분쟁조정위원회에 회사의 전자금융거래서비스의 이용과 관련한 분쟁조정을 신청할 수 있습니다.
+		</span>
+      </p>
+      <p>
+		<span class="tit">제12조 (회사의 안전성 확보 의무)</span><br>
+        <span style=" max-height: 300px; overflow-y: auto;" class="content">
+		회사는 전자금융거래가 안전하게 처리될 수 있도록 선량한 관리자로서의 주의를 다하며, 전자금융거래의 안전성과 신뢰성을 확보할 수 있도록 전자금융거래의 종류별로 전자적 전송이나 처리를 위한 인력, 시설, 전자적 장치 등의 정보기술부문 및 전자금융업무에 관하여 금융위원회가 정하는 기준을 준수합니다.
+		</span>
+      </p>
+      <p>
+		<span class="tit">제13조 (약관외 준칙)</span><br>
+        <span style=" max-height: 300px; overflow-y: auto;" class="content">
+		① 본 약관에서 정하지 아니한 사항(용어의 정의 포함)에 대하여는 전자금융거래법, 전자상거래 등에서의 소비자 보호에 관한 법률, 여신전문금융업법 등 소비자보호 관련 법령 및 개별약관에서 정한 바에 따릅니다.
+		② 회사와 이용자가 본 약관의 내용과 다르게 합의한 사항이 있을 때에는 관련 법령에 저촉되지 않는 범위에서 그 합의 사항이 본 약관보다 우선합니다
+		</span>
+      </p>
+      <p>
+		<span class="tit">제14조 (관할)</span><br>
+        <span style=" max-height: 300px; overflow-y: auto;" class="content">
+		회사와 이용자간에 발생한 분쟁에 관한 관할은 민사소송법에서 정한 바에 따릅니다.</span>
+      </p>
+    </article>
+</section>
 </html>
